# OperatingSystemsLabs

./: tmp.txt
lab1/: main.c
lab11/: main.c  test.c
lab12/: main.c
lab14/: main.c
lab2/: main.c
lab3/: main.c
lab31/: fortest.txt  proxy.c  test.sh  test_input.txt
lab31/v1/: client.c  fortest.txt  proxy.c  test.sh
lab31/v2/: Constants.h  main.cpp
lab32/: CMakeLists.txt  Consts.h  main.cpp
lab32/buffer/: Buffer.h  BufferImpl.cpp  BufferImpl.h
lab32/cleaner/: Cleaner.cpp  Cleaner.h
lab32/client/: Client.h  ClientImpl.cpp  ClientImpl.h
lab32/context/: Context.cpp  Context.h
lab32/context/cash/: CashContext.cpp  CashContext.h
lab32/context/thread/: ThreadContext.cpp  ThreadContext.h
lab32/exception/: CashContextException.h  ConnectException.h  ParseException.h
lab32/logger/: Logger.h
lab32/parser/: ParserImpl.cpp  ParserImpl.h  ParserTypeRequest.h  ResultParseHeading.h
lab32/server/: Server.h  ServerImpl.cpp  ServerImpl.h
lab32/socket/: ServerSocket.h  ServerSocketImpl.cpp  ServerSocketImpl.h
lab32v2/: Constants.h  main.cpp
lab32v2/buffer/: Buffer.h  BufferImpl.cpp  BufferImpl.h
lab32v2/cash/: Cash.h  CashElement.h  CashElementImpl.cpp  CashElementImpl.h  CashImpl.cpp  CashImpl.h
lab32v2/client/: Client.h  ClientImpl.cpp  ClientImpl.h
lab32v2/logger/: Logger.h
lab32v2/parser/: ParseException.h  ParserImpl.cpp  ParserImpl.h  ParserTypeRequest.h  ResultParseHeading.h
lab32v2/server/: ArgsForThread.h  HandlerOneClient.h  HandlerOneClientImpl.cpp  NewServerImpl.cpp  (+3 more)
lab4/: main.c
lab5/: main.c
lab6/: main.c
lab8/: main.c
(+29 files in other folders)
